UIP-1518: Fixed alignment of error for FileUpload component so that it aligns with the center of the upload button

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2107,7 +2107,7 @@ input[type=file] {
     &.input-file-upload {
         .form-error-icon {
             top: auto;
-            bottom: 21px;
+            bottom: 5px;
             right: -16px;
         }
         .form-error-message {
